--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
     <meta content="" name="keywords">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
 
     <link th:href="@{/static/assets/css/policy_modal.css}" type="text/css" rel="stylesheet">
     <!-- Favicons -->
@@ -157,7 +158,7 @@
             color: blue;
         }
     </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css" />
+
 </head>
 
 <body>
@@ -249,9 +250,6 @@
                         <li class="notification-item">
                             <!--                            <i class="bi bi-exclamation-circle text-warning"></i>-->
                             <div id="notifyMessage">
-                                <!--                            <h4>Lorem Ipsum</h4>-->
-                                <!--                            <p>Quae dolorem earum veritatis oditseno</p>-->
-                                <!--                            <p>30 min. ago</p>-->
                             </div>
                         </li>
 
@@ -309,12 +307,12 @@
                 <li class="nav-item dropdown pe-3">
 
                     <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-                        <img src="/static/assets/img/default-logo.png" alt="Profile" class="rounded-circle"
-                             th:unless="${session.user.photo}"/>
-                        <img th:src="${session.user.photo}" alt="Profile" class="rounded-circle"/>
-                        <!--                        <img th:unless="${session.user.photo == null}" th:src="${session.user.photo}" alt="Profile" class="rounded-circle" />-->
+                       <!-- <img th:if="${user.photo!= null}" th:src="@{ ${user.photo}}" alt="User Photo"
+                             style=" width: 50px;  height: 50px; border-radius: 50%;  object-fit: cover;"/>
+                        <img th:unless="${user.photo!= null}" th:src="@{/assets/img/default-logo.png}" alt="Default Photo"
+                             style=" width: 50px;  height: 50px; border-radius: 50%;  object-fit: cover;"/>-->
                         <span class="d-none d-md-block dropdown-toggle ps-2" th:text="${session.user.name}">Name</span>
-                    </a><!-- End Profile Iamge Icon -->
+                    </a>
 
                     <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
                         <li class="dropdown-header">
@@ -336,9 +334,9 @@
                         </li>
 
                         <li>
-                            <a class="dropdown-item d-flex align-items-center" href="/user/profile">
+                            <a class="dropdown-item d-flex align-items-center" >
                                 <i class="bi bi-gear"></i>
-                                <span>Change Password</span>
+                                <span><button id="changePasswordBtn">Change Password</button></span>
                             </a>
                         </li>
                         <li>
@@ -416,53 +414,6 @@
                     </li>
                 </ul>
             </li><!-- End Components Nav -->
-
-            <!--<li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#forms-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-journal-text"></i><span>Forms</span><i class="bi bi-chevron-down ms-auto"></i>
-                </a>
-                <ul id="forms-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                    <li>
-                        <a href="forms-elements.html">
-                            <i class="bi bi-circle"></i><span>Form Elements</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="forms-layouts.html">
-                            <i class="bi bi-circle"></i><span>Form Layouts</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="forms-editors.html">
-                            <i class="bi bi-circle"></i><span>Form Editors</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="forms-validation.html">
-                            <i class="bi bi-circle"></i><span>Form Validation</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>&lt;!&ndash; End Forms Nav &ndash;&gt;-->
-
-            <!--<li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#tables-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-layout-text-window-reverse"></i><span>Tables</span><i class="bi bi-chevron-down ms-auto"></i>
-                </a>
-                <ul id="tables-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                    <li>
-                        <a href="tables-general.html">
-                            <i class="bi bi-circle"></i><span>General Tables</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="tables-data.html">
-                            <i class="bi bi-circle"></i><span>Data Tables</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>&lt;!&ndash; End Tables Nav &ndash;&gt;-->
-
             <li class="nav-item">
                 <a class="nav-link collapsed" data-bs-target="#charts-nav" data-bs-toggle="collapse" href="#">
                     <i class="bi bi-bar-chart"></i><span>Charts</span><i class="bi bi-chevron-down ms-auto"></i>
@@ -486,28 +437,6 @@
                 </ul>
             </li><!-- End Charts Nav -->
 
-            <!--<li class="nav-item">
-                <a class="nav-link collapsed" data-bs-target="#icons-nav" data-bs-toggle="collapse" href="#">
-                    <i class="bi bi-gem"></i><span>Icons</span><i class="bi bi-chevron-down ms-auto"></i>
-                </a>
-                <ul id="icons-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                    <li>
-                        <a href="icons-bootstrap.html">
-                            <i class="bi bi-circle"></i><span>Bootstrap Icons</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="icons-remix.html">
-                            <i class="bi bi-circle"></i><span>Remix Icons</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="icons-boxicons.html">
-                            <i class="bi bi-circle"></i><span>Boxicons</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>&lt;!&ndash; End Icons Nav &ndash;&gt;-->
 
             <li class="nav-heading">Pages</li>
 
@@ -548,62 +477,6 @@
         <i id="pen" class="fa-solid fa-marker"></i>
     </button>
 
-    <!--    <section class="section dashboard">-->
-    <!--        <div class="row">-->
-
-    <!--            &lt;!&ndash; Left side columns &ndash;&gt;-->
-    <!--            <div class="col-lg-8">-->
-    <!--        <div class="row">-->
-    <!--            <div class="middle-panel">-->
-
-    <!--                <ul class="nav nav-tabs" id="myTab" role="tablist">-->
-    <!--                    <li class="nav-item" role="presentation">-->
-    <!--                        <button class="nav-link active" onclick="welcome(0)" id="newsfeed-tab"  data-bs-toggle="tab" data-bs-target="#newsfeedTab" type="button" role="tab" aria-controls="Newsfeed" aria-selected="true">Newsfeed</button>-->
-    <!--                    </li>-->
-    <!--                    <li class="nav-item" role="presentation">-->
-    <!--                        <button class="nav-link" onclick="getAllEventsForPost()" id="events-tab" data-bs-toggle="tab" data-bs-target="#eventsTab" type="button" role="tab" aria-controls="Events" aria-selected="false">Events</button>-->
-    <!--                    </li>-->
-    <!--                    <li class="nav-item" role="presentation">-->
-    <!--                        <button class="nav-link" id="polls-tab" data-bs-toggle="tab" data-bs-target="#pollsTab" type="button" role="tab" aria-controls="Polls" aria-selected="false">Polls</button>-->
-    <!--                    </li>-->
-    <!--                </ul>-->
-    <!--                <div class="tab-content" id="myTabContent">-->
-    <!--                    <div class="tab-pane fade show active" id="newsfeedTab" role="tabpanel" aria-labelledby="newsfeed-tab">-->
-    <!--                        <div id="newsfeed"  class=""></div>-->
-    <!--                    </div>-->
-    <!--                    <div class="tab-pane fade" id="eventsTab" role="tabpanel" aria-labelledby="events-tab">-->
-    <!--                        <div id="events"  class=""></div>-->
-    <!--                    </div>-->
-    <!--                    <div class="tab-pane fade" id="pollsTab" role="tabpanel" aria-labelledby="polls-tab">-->
-    <!--                        <div id="polls" class="hidden"></div>-->
-    <!--                    </div>-->
-    <!--                </div>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--            </div>-->
-
-
-    <!--            <div class="col-lg-4">-->
-    <!--                <div class="card">-->
-    <!--                    <div class="card-body">-->
-    <!--                        <h5 class="card-title">Recent Activity <span>| Today</span></h5>-->
-
-    <!--                        <div class="activity">-->
-    <!--      <span>sfdsfdsfdsfdfdsf</span>-->
-    <!--      <span>sfdsfdsfdsfdfdsf</span>-->
-    <!--      <span>sfdsfdsfdsfdfdsf</span>-->
-    <!--      <span>sfdsfdsfdsfdfdsf</span>-->
-    <!--      <span>sfdsfdsfdsfdfdsf</span>-->
-    <!--      <span>sfdsfdsfdsfdfdsf</span>-->
-    <!--      <span>sfdsfdsfdsfdfdsf</span>-->
-    <!--      <span>sfdsfdsfdsfdfdsf</span>-->
-    <!--                        </div>-->
-    <!--                    </div>-->
-    <!--                </div>-->
-    <!--            </div>-->
-
-    <!--        </div>-->
-    <!--    </section>-->
     <div class="middle-panel">
 
 
@@ -1009,10 +882,6 @@
     </div>
 
 
-    <!-- calendar modal box end  -->
-
-
-    <!-- event create modal box start  -->
 
     <div class="modal fade" id="eventCreateModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -1081,7 +950,6 @@
                         <input type="text" name="eventType" id="eventType" value="VOTE" hidden>
                         <label for="multipartFile">Enter Event Photo</label>
                         <input type="file" name="multipartFile" class="form-control" id="pollMultipartFile" >
-
                         <label for="options">Add vote options </label>
                         <div class="d-flex"><input type="text" name="voteOptionInput" id="voteOptionInput" class="form-control"><button type="button" class="btn btn-primary " onclick="createAVoteOption()"><i class="fa-solid fa-plus text-white"></i></button></div>
                         <div>
@@ -1107,8 +975,6 @@
             </div>
         </div>
     </div>
-    <!-- poll create modal box end  -->
-
     <div class="modal fade" id="welcomeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <link href="/static/assets/css/modals.css" rel="stylesheet">
         <div class="modal-dialog modal-dialog-centered">
@@ -1153,7 +1019,7 @@
                     <div id="phoneChangeForm" style="display: none">
                         <h2>Enter your information</h2>
                         <form>
-                            <div class="form-group">
+                            <div class="form-group" style="width: 465px;">
                                 <label for="phoneInput">Phone number:</label>
                                 <input type="tel" id="phoneInput" class="form-control" placeholder="Enter phone number">
                                 <div class="invalid-feedback">
@@ -1352,8 +1218,8 @@
                                 </div>
                             </div>
                             <button type="button" class="btn btn-primary next">Skip</button>
+                            <script src="/static/assets/js/hobbies.js"></script>
                         </form>
-                        <script src="/static/assets/js/hobbies.js"></script>
                     </div>
                     <div id="skillChangeForm">
                         <h2>Enter your skills</h2>
@@ -1390,7 +1256,26 @@
             </div>
         </div>
     </div>
-
+    <div class="modal fade" id="finishedModal" data-bs-backdrop="static" tabindex="-1" role="dialog"
+         aria-labelledby="successModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="finishedModalLabel">Congratulations!</h5>
+                </div>
+                <div class="modal-body">
+                    <div class="text-center">
+                        <p>Your account has been set up successfully.Please login again to use the website.</p>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" id="loginButton" data-bs-dismiss="modal">Login
+                    </button>
+                </div>
+            </div>
+        </div>
+        <script src="/assets/js/congratulation.js"></script>
+    </div>
 </main><!-- End #main -->
 
 <div th:fragment="footer">
@@ -1494,6 +1379,14 @@
 
 
         document.addEventListener('DOMContentLoaded', function () {
+            localStorage.removeItem('savedPassword')
+            localStorage.removeItem('phoneNumber')
+            localStorage.removeItem('rawImage')
+            localStorage.removeItem('Hobbies')
+            localStorage.removeItem('dob')
+            localStorage.removeItem('gender')
+            localStorage.removeItem('selectedSkills')
+            localStorage.removeItem('Experience')
             function checkPendingStatus() {
 
                 fetch('/user/checkPendingStatus')
@@ -1595,8 +1488,8 @@
                             // Add event listener to the "Next" buttons
                             document.querySelectorAll('.modal-content form button.next').forEach(button => {
                                 button.addEventListener("click", function (event) {
-                                    event.preventDefault(); // Prevent form submission
-                                    currentIndex++; // Move to the next form
+                                    event.preventDefault();
+                                    currentIndex++;
                                     if (currentIndex === 1) {
                                         hideForms(passwordForm);
                                         showForm(photoForm);
