--- a/src/main/resources/templates/user/user-group.html
+++ b/src/main/resources/templates/user/user-group.html
@@ -16,7 +16,6 @@
         </button>
         <br><br>
 
-        <!-- Create Community Modal -->
         <div class="modal fade" id="createCommunityModal" tabindex="-1" aria-labelledby="createCommunityModalLabel" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
@@ -81,7 +80,7 @@
                     <div class="modal-body">
                         <form id="createGroupForm">
                             <div class="form-group">
-                                <label for="name">Name:</label>
+                                <label for="name1">Name:</label>
                                 <input type="text" class="form-control" id="name1" name="name">
                             </div>
                             <input type="hidden" id="communityId1" name="id">
