--- a/src/main/resources/templates/user/other-user-profile.html
+++ b/src/main/resources/templates/user/other-user-profile.html
@@ -101,9 +101,14 @@
                 </div>
             </div>
         </div>
+
+        <div id="user-post-div">
+
+        </div>
     </section>
 </main>
 <div th:replace="~{index::footer}"></div>
+<script src="/static/assets/js/userDetail.js"></script>
 <script>
     document.getElementById('seeMoreBtn').addEventListener('click', function() {
         const moreUserInfo = document.getElementById('moreUserInfo');
